Update columns spacing on heading to ensure "Flex your freedom" wraps correctly

--- a/source/wp-content/themes/wporg-main-2022/style.css
+++ b/source/wp-content/themes/wporg-main-2022/style.css
@@ -68,6 +68,10 @@
 		padding-left: var(--wp--preset--spacing--30);
 		padding-right: var(--wp--preset--spacing--30);
 	}
+
+	#intro .wp-block-columns {
+		display: block;
+	}
 }
 
 @media (max-width: 1000px) {
